@@ -43,6 +43,7 @@
 #include "wmpomme-master.xpm"
 
 #include "../client-common/dbus-client.h"
+#include "../client-common/video-client.h"
 
 
 struct {
@@ -91,7 +92,7 @@ wmmbp_dbus_init(void)
 
   signals = MBP_DBUS_SIG_LCD | MBP_DBUS_SIG_KBD
             | MBP_DBUS_SIG_VOL | MBP_DBUS_SIG_MUTE
-            | MBP_DBUS_SIG_LIGHT;
+            | MBP_DBUS_SIG_LIGHT | MBP_DBUS_SIG_VIDEO;
 
   conn = mbp_dbus_init(&dbus_err, signals);
 
@@ -175,6 +176,10 @@ mbp_dbus_listen(int timeout)
 	  dbus_message_get_args(msg, &dbus_err,
 				DBUS_TYPE_BOOLEAN, &mbp.snd_mute,
 				DBUS_TYPE_INVALID);
+	}
+      else if (dbus_message_is_signal(msg, "org.pommed.signal.videoSwitch", "videoSwitch"))
+	{
+	  mbp_video_switch();
 	}
       else if (dbus_message_is_signal(msg, DBUS_INTERFACE_LOCAL, "Disconnected"))
 	{
